--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,7 +6,7 @@ body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #00302E;
+  /* background-color: #00302E; */
   color: white;
 }
 
