--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,7 +8,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   /* background-color: #00302E; */
   color: white;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
 }
 
 code {
