--- a/client/src/index.css
+++ b/client/src/index.css
@@ -86,3 +86,83 @@ span.swiper-pagination-bullet.swiper-pagination-bullet-active {
 .gridSpan{
   grid-column: 1 / -1;
 }
+.nav-link{
+  position: relative;
+
+}
+
+.nav-link::after{
+  content: '';
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  border-radius: 5px;
+  height: 0.2em;
+  bottom: -2px;
+  left: 0;
+  background: rgb(220 38 38);
+  transform-origin: bottom right;
+  transition: transform 0.25s ease-out;
+}
+.nav-link:hover::after{
+  transform: scaleX(1);
+  transform-origin: bottom left;
+}
+.menu-btn{
+  display: none;
+}
+.nav-link:last-child{
+  color: white;
+  background: rgb(220 38 38);;
+  padding: 10px 30px;
+  font-weight: bold;
+  /* margin-left: 100px; */
+
+}
+
+
+
+@media only screen and (max-width: 750px) {
+  .menu-btn{
+    display: block;
+    cursor: pointer;
+  }
+  .nav-link{
+    display: none;
+    transition: all .3s ease-in-out;
+
+  }
+  .sideBar{
+    flex-direction: column;
+    background-color: rgb(0, 0, 0);
+    justify-content: center;
+    gap: 50px;
+    align-items: center;
+    height: 100vh;
+    width: 0px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 100000;
+    transition: all .5s ease-in-out;
+  }
+  .sideBar.active .nav-link{
+    display: block;
+  }
+  .overlay{
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    z-index: -999;
+    background-color: #2c2b2b94;
+  
+  }
+ 
+ 
+  .sideBar.active{
+    width: 300px;
+    
+  }
+}
