--- a/client/src/index.css
+++ b/client/src/index.css
@@ -28,6 +28,20 @@ html {
   font-size: 62.5%;
   scroll-behavior: smooth;
 }
+:root{
+  --background-color: #ffff;
+  --primary-color: #0000
+
+}
+[data-theme='dark']{
+  --background-color: #000000;
+  --primary-color: #ffff
+
+}
+.dashboard{
+  background-color: var(--background-color);
+  color: var(--primary-color);
+}
 
 /* global.css*/
 
