--- a/client/src/index.css
+++ b/client/src/index.css
@@ -30,17 +30,50 @@ html {
 }
 :root{
   --background-color: #ffff;
-  --primary-color: #0000
+  --primary-color: #000000;
+  --toggle-bg: #810101;
+  --toggle-fg: #b66a6a;
 
 }
 [data-theme='dark']{
   --background-color: #000000;
-  --primary-color: #ffff
+  --primary-color: #ffff;
+  --toggle-bg: #b66a6a;
+  --toggle-fg: #810101;
 
 }
 .dashboard{
   background-color: var(--background-color);
   color: var(--primary-color);
+  transition: background-color .25s ease-in-out;
+
+}
+.toggle + .togLabel{
+  color: var(--primary-color);
+}
+.toggle + .togLabel::before{
+  content: '';
+  height: 1em;
+  width: 2em;
+  border-radius: 1em;
+  background-color: var(--toggle-bg);
+  margin-right: .5em;
+  transition: background-color .25s ease-in-out, transform 240ms ease-in-out;
+}
+
+.toggle + .togLabel::after{
+  content: '';
+  height: .8em;
+  width: .8em;
+  border-radius: 1em;
+  background-color: var(--toggle-fg);
+  position: absolute;
+  left: 0.2em;
+
+}
+.toggle:checked + .togLabel::after{
+  transform: translateX(100%);
+
 }
 
 /* global.css*/
