--- a/client/src/index.css
+++ b/client/src/index.css
@@ -89,7 +89,8 @@ html {
 /* Track */
 ::-webkit-scrollbar-track {
 	background: #2c2b2b;
-	border-radius: 0px;
+  
+	border-radius: 5px;
 }
 
 /* Handle */
@@ -157,7 +158,7 @@ span.swiper-pagination-bullet.swiper-pagination-bullet-active {
   transform: scaleX(1);
   transform-origin: bottom left;
 }
-.menu-btn{
+.menu-btn, .side-btn{
   display: none;
 }
 .nav-link:last-child{
@@ -168,9 +169,33 @@ span.swiper-pagination-bullet.swiper-pagination-bullet-active {
   /* margin-left: 100px; */
 
 }
+/* @media only screen and (max-width: 650px) {
+  .menu-btn1{
+
+  }
+} */
 
 
 
+.userSideBar{
+  background-color: var(--background-color);
+}
+.side-link{
+  width: 100%;
+  padding: 20px 50px;
+  transition: all ease-in-out .5s;
+  
+}
+.side-link:hover{
+  background-color: #8f1f1f2f;
+}
+.content{
+  width: calc(100% - 300px);
+}
+.mealWrapper{
+  background-color: var(--background-color);
+  border-radius: 10px;
+}
 @media only screen and (max-width: 750px) {
   .menu-btn{
     display: block;
@@ -209,28 +234,46 @@ span.swiper-pagination-bullet.swiper-pagination-bullet-active {
   
   }
  
- 
+ .content{
+  width: 100%;
+ }
+ ::-webkit-scrollbar {
+	width: 0px;
+}
   .sideBar.active{
     width: 300px;
+
     
   }
-}
-.userSideBar{
-  background-color: var(--background-color);
-}
-.side-link{
-  width: 100%;
-  padding: 20px 50px;
-  transition: all ease-in-out .5s;
-  
-}
-.side-link:hover{
-  background-color: #8f1f1f2f;
-}
-.content{
-  width: calc(100% - 300px);
-}
-.mealWrapper{
-  background-color: var(--background-color);
-  border-radius: 10px;
+  .side-link, .signout{
+    display: none;
+    transition: all .3s ease-in-out;
+
+  }
+  .userSideBar{
+    width: 0px;
+    transition: all .5s ease-in-out;
+
+  }
+ 
+  .userSideBar.active{
+    width: 300px;
+    position: fixed;
+  }
+  .side-btn{
+    display: block;
+    left: 0px;
+    transition: all .5s ease-in-out;
+    background-color: var(--background-color);
+    color: var(--toggle-fg);
+  }
+  .userSideBar.active .side-btn{
+    left: 270px;
+  }
+  .userSideBar.active .side-link{
+    display: flex;
+  }
+  .userSideBar.active .signout{
+    display: flex;
+  }
 }
