--- a/client/src/index.css
+++ b/client/src/index.css
@@ -34,6 +34,7 @@ html {
   --primary-color: #000000;
   --toggle-bg: #810101;
   --toggle-fg: #b66a6a;
+  --overlay-bg: #ffffff79;
 
 }
 [data-theme='dark']{
@@ -42,6 +43,7 @@ html {
   --primary-color: #ffff;
   --toggle-bg: #b66a6a;
   --toggle-fg: #810101;
+  --overlay-bg: #00000071;
 
 }
 .dashboard{
@@ -169,11 +171,7 @@ span.swiper-pagination-bullet.swiper-pagination-bullet-active {
   /* margin-left: 100px; */
 
 }
-/* @media only screen and (max-width: 650px) {
-  .menu-btn1{
 
-  }
-} */
 
 
 
@@ -196,6 +194,32 @@ span.swiper-pagination-bullet.swiper-pagination-bullet-active {
   background-color: var(--background-color);
   border-radius: 10px;
 }
+.modal-overlay{
+  width: 100%;
+  height: 100vh;
+  position: absolute;
+  display: flex;
+  justify-content: flex-end;
+  top: 0;
+  left: 0;
+  background-color: var(--overlay-bg);
+  transition: all 4s ease-in-out;
+}
+.modal-content{
+  width: 50%;
+  background-color: var(--primary-bg);
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  padding: 40px ;
+}
+
+
+
+
+
 @media only screen and (max-width: 750px) {
   .menu-btn{
     display: block;
@@ -245,15 +269,19 @@ span.swiper-pagination-bullet.swiper-pagination-bullet-active {
 
     
   }
-  .side-link, .signout{
+  /* .links, .signout{
     display: none;
-    transition: all .3s ease-in-out;
 
-  }
+  } */
   .userSideBar{
+    
     width: 0px;
     transition: all .5s ease-in-out;
 
+  }
+  .sidebar-content{
+    display: none;
+    transition: all .4s ease-in-out;
   }
  
   .userSideBar.active{
@@ -270,10 +298,10 @@ span.swiper-pagination-bullet.swiper-pagination-bullet-active {
   .userSideBar.active .side-btn{
     left: 270px;
   }
-  .userSideBar.active .side-link{
+  .userSideBar.active .sidebar-content{
     display: flex;
+    transition: all .2s ease-in-out;
+
   }
-  .userSideBar.active .signout{
-    display: flex;
-  }
+ 
 }
